--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -263,6 +263,14 @@ body {
     position: absolute;
     left: 0;
     top: 0;
+    svg {
+        position: absolute;
+        left: 50%;
+        bottom: -20px;
+        transform: translateX(-50%) rotate(90deg);
+        height: 15px;
+        fill: #000000;
+    }
 }
 .author-technology__text {
     font-family: $robotoBold;
