--- a/src/sass/theme/_media.scss
+++ b/src/sass/theme/_media.scss
@@ -133,7 +133,6 @@
     left: 50%;
     top: 50px;
     transform: translate(-50%, 0);
-    border-radius: 50px;
   }
   .author-technology__text {
     transform: translate(-50%, -50%) rotate(0);
@@ -367,6 +366,7 @@
   }
   .description-schema{
     flex-direction: column;
+    align-items: center;
   }
   .description-schema-image{
     height: 200px;
