--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -359,6 +359,15 @@ body {
   position: absolute;
   left: 0;
   top: 0; }
+  .author-technology svg {
+    position: absolute;
+    left: 50%;
+    bottom: -20px;
+    -webkit-transform: translateX(-50%) rotate(90deg);
+    -ms-transform: translateX(-50%) rotate(90deg);
+    transform: translateX(-50%) rotate(90deg);
+    height: 15px;
+    fill: #000000; }
 
 .author-technology__text {
   font-family: "Roboto Bold";
@@ -1036,8 +1045,7 @@ input[type="tel"] {
     top: 50px;
     -webkit-transform: translate(-50%, 0);
     -ms-transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-    border-radius: 50px; }
+    transform: translate(-50%, 0); }
   .author-technology__text {
     -webkit-transform: translate(-50%, -50%) rotate(0);
     -ms-transform: translate(-50%, -50%) rotate(0);
@@ -1245,7 +1253,10 @@ input[type="tel"] {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
   .description-schema-image {
     height: 200px;
     margin-right: 0;
