Hotfix autoplay video

--- a/src/sass/theme/_grid.scss
+++ b/src/sass/theme/_grid.scss
@@ -34,6 +34,9 @@
 @media screen and (min-width: 1200px) {
 	.container{
 		max-width: 1048px;
+		&.container_1200 {
+			max-width: 1200px;
+		}
 	}
 }
 /* = CONTAINER END = */
