--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -937,7 +937,9 @@ input[type="tel"] {
 
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1048px; } }
+    max-width: 1048px; }
+    .container.container_1200 {
+      max-width: 1200px; } }
 
 /* = CONTAINER END = */
 /* = MEDIA = */
