--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -231,9 +231,9 @@ body {
 }
 // MAIN
 .main {
-    position: fixed;
-    height: 0;
-    overflow: hidden;
+    // position: fixed;
+    // height: 0;
+    // overflow: hidden;
     background: linear-gradient(211.1deg, #5D24D5 0%, #2F17C0 100%);
 }
 .information {
@@ -508,6 +508,11 @@ body {
         width: 85%;
         position: relative;
         background-color: #000000;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        padding-right: 5vw;
+        padding-bottom: 5vw;
         &::before {
             content: '';
             width: 100%;
@@ -562,16 +567,15 @@ body {
     width: 100%; 
     height: 100%;
     object-fit: cover;
+    object-position: center top;
 }
 .after-description {
-    position: absolute;
+    position: relative;
     z-index: 2;
     padding-top: 10px;
     border-top: 2px solid #ffffff;
     max-width: 870px;
     width: 100%;
-    right: 10vw;
-    bottom: 5vw;
     .button {
         margin-top: 20px;
     }
