--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -321,9 +321,6 @@ body {
   margin-bottom: 20px; }
 
 .main {
-  position: fixed;
-  height: 0;
-  overflow: hidden;
   background: -o-linear-gradient(238.9deg, #5D24D5 0%, #2F17C0 100%);
   background: linear-gradient(211.1deg, #5D24D5 0%, #2F17C0 100%); }
 
@@ -614,7 +611,18 @@ body {
   .swiper-1 .swiper-slide {
     width: 85%;
     position: relative;
-    background-color: #000000; }
+    background-color: #000000;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    padding-right: 5vw;
+    padding-bottom: 5vw; }
     .swiper-1 .swiper-slide::before {
       content: '';
       width: 100%;
@@ -664,17 +672,17 @@ body {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover; }
+  object-fit: cover;
+  -o-object-position: center top;
+  object-position: center top; }
 
 .after-description {
-  position: absolute;
+  position: relative;
   z-index: 2;
   padding-top: 10px;
   border-top: 2px solid #ffffff;
   max-width: 870px;
-  width: 100%;
-  right: 10vw;
-  bottom: 5vw; }
+  width: 100%; }
   .after-description .button {
     margin-top: 20px; }
 
@@ -943,6 +951,23 @@ input[type="tel"] {
 
 /* = CONTAINER END = */
 /* = MEDIA = */
+@media (orientation: landscape) {
+  .skr4t-start {
+    bottom: 5px !important;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .skr4t-start__text {
+    text-align: center !important; } }
+
 @media screen and (max-width: 1400px) {
   .swiper-1 {
     width: 100%;
@@ -964,9 +989,7 @@ input[type="tel"] {
         height: 9px;
         width: 24px; }
   .after-description {
-    max-width: 65%;
-    right: 5vw;
-    bottom: 5vw; }
+    max-width: 65%; }
     .after-description .button {
       padding: 10px 5px; }
     .after-description .button__label {
@@ -1160,11 +1183,7 @@ input[type="tel"] {
   .after-description {
     padding-left: 15px;
     padding-bottom: 15px;
-    max-width: 100%;
-    right: inherit;
-    border: none;
-    left: 0;
-    bottom: 0; }
+    max-width: 100%; }
     .after-description .button {
       padding: 10px 5px; }
     .after-description .button__label {
@@ -1305,7 +1324,15 @@ input[type="tel"] {
     -ms-flex-pack: distribute;
     justify-content: space-around; }
     .footer-wrapper .button__label {
-      font-size: 18px; } }
+      font-size: 18px; }
+  .swiper-1 {
+    height: auto; }
+    .swiper-1 .swiper-slide {
+      padding-top: 150px;
+      padding-right: 0;
+      padding-bottom: 50px; }
+  .after-description {
+    border: none; } }
 
 @media screen and (max-width: 667px) {
   .after-description__item {
@@ -1363,14 +1390,15 @@ input[type="tel"] {
     font-size: 14px; } }
 
 @media screen and (max-width: 480px) {
-  .swiper-1 {
-    height: 80vw; }
-    .swiper-1 .swiper-button-prev {
-      width: 35px;
-      height: 35px; }
-    .swiper-1 .swiper-button-next {
-      width: 35px;
-      height: 35px; }
+  .swiper-1 .swiper-slide {
+    padding-top: 75px;
+    padding-bottom: 25px; }
+  .swiper-1 .swiper-button-prev {
+    width: 35px;
+    height: 35px; }
+  .swiper-1 .swiper-button-next {
+    width: 35px;
+    height: 35px; }
   .after-description__title {
     margin-bottom: 8px; }
   .after-description__item {
@@ -1388,8 +1416,6 @@ input[type="tel"] {
     font-size: 12px; } }
 
 @media screen and (max-width: 360px) {
-  .swiper-1 {
-    height: 90vw; }
   .skr4t-start__text br {
     display: none; } }
 
