--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,7 +1,39 @@
 @import 'theme/reset';
-@import 'theme/fonts';
 @import 'theme/variables';
 
+/* Import Fonst */
+@font-face {
+	font-family: "Roboto Regular";
+	src: url("assets/fonts/Roboto/Regular/Roboto-Regular.ttf");
+	src: url("assets/fonts/Roboto/Regular/Roboto-Regular.ttf")format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: "Roboto Bold";
+	src: url("assets/fonts/Roboto/Bold/Roboto-Bold.ttf");
+	src: url("assets/fonts/Roboto/Bold/Roboto-Bold.ttf")format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: "Soyuz Grotesk Bold";
+	src: url("assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.woff");
+  	src: url("assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.woff")format("woff"),
+         url("assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.otf") format("opentype");
+	font-style: normal;
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: "Inter Medium";
+	src: url("assets/fonts/Inter/Medium/Inter-Medium.ttf");
+	src: url("assets/fonts/Inter/Medium/Inter-Medium.ttf")format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
 
 body {
     color: #000000;
@@ -27,65 +59,6 @@ body {
     height: 10px;
     fill: #ffffff;
 }
-// RANGE
-.irs--big{
-    width: 210px;
-}
-.irs--big .irs-handle{
-    width: 2px;
-    height: 30px;
-    background: #000000!important;
-    border: none;
-    box-shadow: none;
-    border-radius: 0!important;
-    cursor: pointer;
-}
-.irs--big .irs-bar{
-    border:none;
-    box-shadow: none;
-    background:  #000000;
-    border-radius: 0!important;
-}
-.irs--big .irs-line{
-    background: transparent;
-    border-radius: 0!important;
-    border: none;
-}
-.irs--big .irs-grid-pol.small{
-    height: 10px;
-}
-.irs-grid-text{
-    display: none;
-}
-.irs-grid{
-    left:0!important;
-}
-.irs--big .irs-single{
-    background: transparent;
-    position: relative;
-    color: transparent!important;
-    width: 15px;
-    height: 15px;
-    top:10px;
-    cursor: pointer;
-    &:before {
-        content: '';
-        position: absolute;
-        left: 50%;
-        top: 0;
-        transform: translate(-50%, 0);
-        border: 7px solid transparent;
-        border-top: 7px solid #000000;
-    }
-}
-.irs-max, .irs-min{
-    display: none;
-}
-.irs--big .irs-grid-pol{
-    width: 2px;
-    height: 20px;
-    background-color:  #000000;
-}
 // MODE 
 .dark-mode {
     background-color: #000000!important;
@@ -95,23 +68,23 @@ body {
             color: #000000!important;
         }
     }
-    .irs--big .irs-single {
-        &:before{
-            border-top-color: #ffffff!important;
-        }
+    // .irs--big .irs-single {
+    //     &:before{
+    //         border-top-color: #ffffff!important;
+    //     }
 
-    }
-    .irs--big .irs-grid-pol {
-        background-color: #ffffff!important;
-    }
-    .irs--big .irs-handle, 
-    .irs--big .irs-bar {
-        background-color: #ffffff!important;
-    }
-    .marquee {
-        border-top-color: #ffffff;
-        border-bottom-color:  #ffffff;
-    }
+    // }
+    // .irs--big .irs-grid-pol {
+    //     background-color: #ffffff!important;
+    // }
+    // .irs--big .irs-handle, 
+    // .irs--big .irs-bar {
+    //     background-color: #ffffff!important;
+    // }
+    // .marquee {
+    //     border-top-color: #ffffff;
+    //     border-bottom-color:  #ffffff;
+    // }
     .description-schema-image {
         filter: invert(1);
     }
@@ -140,6 +113,10 @@ body {
     color: #000000;
     width: 100%;
     margin: 0 auto;
+}
+.ttl{
+    display: block;
+    width: 100%;
 }
 .text__title {
     display: inline-block;
@@ -231,127 +208,10 @@ body {
 }
 // MAIN
 .main {
-    // position: fixed;
-    // height: 0;
-    // overflow: hidden;
-    background: linear-gradient(211.1deg, #5D24D5 0%, #2F17C0 100%);
-}
-.information {
-    min-height: 100vh;
-    background-color: #ffffff;
-    position: relative;
-    .container {
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-}
-.information-check {
-    color: #000000;
-    position: absolute;
-    right: 75px;
-    bottom: 60px;
-    line-height: 1.5;
-}
-.author-technology {
-    width: 60px;
-    height: 290px;
-    color: #ffffff;
-    background-color: #000000;
-    position: absolute;
-    left: 0;
-    top: 0;
-    svg {
-        position: absolute;
-        left: 50%;
-        bottom: -20px;
-        transform: translateX(-50%) rotate(90deg);
-        height: 15px;
-        fill: #000000;
-    }
-}
-.author-technology__text {
-    font-family: $robotoBold;
-    font-size: 12px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%) rotate(-90deg);
-    width: 290px;
-    text-align: center;
-    color: #ffffff;
-}
-// READING SPEED
-.reading-speed {
-    padding-top: 175px;
-    padding-bottom: 100px;
-    position: relative;
-    background-color: #ffffff;
-}
-.reading-speed__label {
-    margin-bottom: 90px;
-}
-.marquee {
-    width: 100%;
-    height: 200px;
-    border-top: 1px solid rgba(0,0,0,.25);
-    border-bottom: 1px solid rgba(0,0,0,.25);
+    position: fixed;
+    height: 0;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    margin-bottom: 200px;
-    &.active {
-        .marquee__text {
-            color: #000000;
-        }
-        .marquee__wrapper {
-            margin-left: 0;
-        }
-    }
-}
-.marquee__wrapper {
-    margin-left: 50.5%;
-}
-
-.marquee__text{
-    font-family: $sgBold;
-    font-size: 60px;
-    color: #bfbfbf;
-    white-space: nowrap;
-}
-.reading-speed-navigation {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 60px;
-    .container{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-.range-wrapper {
-    text-align: center;
-}
-.range-wrapper__value {
-    opacity: 0;
-    margin-top: 25px;
-    font-family: $interMedium;
-    font-size: 12px;
-}
-.reading-speed__number {
-    font-size: 18px;
-    opacity: 0;
-}
-.reading-speed__stop {
-    opacity: 0;
-    font-family: $sgBold;
-    font-size: 16px;
-    span {
-        text-decoration: underline;
-        cursor: pointer;
-    }
+    background: linear-gradient(211.1deg, #5D24D5 0%, #2F17C0 100%);
 }
 // DESCRIPTION
 .description {
@@ -394,12 +254,9 @@ body {
     margin: 0 auto; 
 }
 .description-whom__title {
-    font-family: $sgBold;
+    font-family: $robotoBold;
     margin-bottom: 75px;
     font-size: 35px;
-}
-.description-whom-list {
-    margin-bottom: 240px;
 }
 .description-whom-item {
     border-top: 3px solid #000000;
@@ -460,7 +317,7 @@ body {
     transform: translateY(-10px);
 }
 .author-description-wrapper__name {
-    font-family: $sgBold;
+    font-family: $robotoBold;
     font-size: 36px;
     margin-bottom: 40px;
 }
@@ -501,23 +358,24 @@ body {
     line-height: 1;
     margin-bottom: 75px;
 }
+// SWIPER VIDEO
 .swiper-1 {
     width: 100%;
-    height: 900px;
+    max-height: 900px;
     .swiper-slide {
-        width: 85%;
+        width: 100%;
         position: relative;
         background-color: #000000;
         display: flex;
         align-items: flex-end;
         justify-content: flex-end;
-        padding-right: 5vw;
+        padding-right: 127px;
         padding-bottom: 5vw;
         &::before {
             content: '';
             width: 100%;
             height: 100%;
-            background: linear-gradient(89.47deg, rgba(0, 0, 0, 0.6) 0.47%, rgba(0, 0, 0, 0) 99.57%);
+            background: linear-gradient(89.47deg, rgba(0, 0, 0, 1) 0.47%, rgba(0, 0, 0, .5) 99.57%);
             position: absolute;
             left: 0;
             top: 0;
@@ -597,8 +455,8 @@ body {
         background-color: #5D24D4;
         position: absolute;
         left: 0;
-        top: 50%;
-        transform: translateY(-50%) rotate(45deg);
+        top: 7px;
+        transform: rotate(45deg);
     }
 }
 // REGISTRATION
