--- a/src/styles.css
+++ b/src/styles.css
@@ -58,31 +58,32 @@ table {
   margin: 0; }
 
 /* = RESET END = */
+/* Import Fonst */
 @font-face {
   font-family: "Roboto Regular";
-  src: url("../assets/fonts/Roboto/Regular/Roboto-Regular.ttf");
-  src: url("../assets/fonts/Roboto/Regular/Roboto-Regular.ttf") format("truetype");
+  src: url("assets/fonts/Roboto/Regular/Roboto-Regular.ttf");
+  src: url("assets/fonts/Roboto/Regular/Roboto-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: normal; }
 
 @font-face {
   font-family: "Roboto Bold";
-  src: url("../assets/fonts/Roboto/Bold/Roboto-Bold.ttf");
-  src: url("../assets/fonts/Roboto/Bold/Roboto-Bold.ttf") format("truetype");
+  src: url("assets/fonts/Roboto/Bold/Roboto-Bold.ttf");
+  src: url("assets/fonts/Roboto/Bold/Roboto-Bold.ttf") format("truetype");
   font-style: normal;
   font-weight: normal; }
 
 @font-face {
   font-family: "Soyuz Grotesk Bold";
-  src: url("../assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.woff");
-  src: url("../assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.woff") format("woff"), url("../assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.otf") format("opentype");
+  src: url("assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.woff");
+  src: url("assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.woff") format("woff"), url("assets/fonts/SoyuzGrotesk/Bold/SoyuzGrotesk-Bold.otf") format("opentype");
   font-style: normal;
   font-weight: normal; }
 
 @font-face {
   font-family: "Inter Medium";
-  src: url("../assets/fonts/Inter/Medium/Inter-Medium.ttf");
-  src: url("../assets/fonts/Inter/Medium/Inter-Medium.ttf") format("truetype");
+  src: url("assets/fonts/Inter/Medium/Inter-Medium.ttf");
+  src: url("assets/fonts/Inter/Medium/Inter-Medium.ttf") format("truetype");
   font-style: normal;
   font-weight: normal; }
 
@@ -113,83 +114,12 @@ body {
   height: 10px;
   fill: #ffffff; }
 
-.irs--big {
-  width: 210px; }
-
-.irs--big .irs-handle {
-  width: 2px;
-  height: 30px;
-  background: #000000 !important;
-  border: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border-radius: 0 !important;
-  cursor: pointer; }
-
-.irs--big .irs-bar {
-  border: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  background: #000000;
-  border-radius: 0 !important; }
-
-.irs--big .irs-line {
-  background: transparent;
-  border-radius: 0 !important;
-  border: none; }
-
-.irs--big .irs-grid-pol.small {
-  height: 10px; }
-
-.irs-grid-text {
-  display: none; }
-
-.irs-grid {
-  left: 0 !important; }
-
-.irs--big .irs-single {
-  background: transparent;
-  position: relative;
-  color: transparent !important;
-  width: 15px;
-  height: 15px;
-  top: 10px;
-  cursor: pointer; }
-  .irs--big .irs-single:before {
-    content: '';
-    position: absolute;
-    left: 50%;
-    top: 0;
-    -webkit-transform: translate(-50%, 0);
-    -ms-transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-    border: 7px solid transparent;
-    border-top: 7px solid #000000; }
-
-.irs-max, .irs-min {
-  display: none; }
-
-.irs--big .irs-grid-pol {
-  width: 2px;
-  height: 20px;
-  background-color: #000000; }
-
 .dark-mode {
   background-color: #000000 !important; }
   .dark-mode .author-technology {
     background-color: #ffffff; }
     .dark-mode .author-technology__text {
       color: #000000 !important; }
-  .dark-mode .irs--big .irs-single:before {
-    border-top-color: #ffffff !important; }
-  .dark-mode .irs--big .irs-grid-pol {
-    background-color: #ffffff !important; }
-  .dark-mode .irs--big .irs-handle,
-  .dark-mode .irs--big .irs-bar {
-    background-color: #ffffff !important; }
-  .dark-mode .marquee {
-    border-top-color: #ffffff;
-    border-bottom-color: #ffffff; }
   .dark-mode .description-schema-image {
     -webkit-filter: invert(1);
     filter: invert(1); }
@@ -213,6 +143,10 @@ body {
   color: #000000;
   width: 100%;
   margin: 0 auto; }
+
+.ttl {
+  display: block;
+  width: 100%; }
 
 .text__title {
   display: inline-block;
@@ -321,135 +255,11 @@ body {
   margin-bottom: 20px; }
 
 .main {
+  position: fixed;
+  height: 0;
+  overflow: hidden;
   background: -o-linear-gradient(238.9deg, #5D24D5 0%, #2F17C0 100%);
   background: linear-gradient(211.1deg, #5D24D5 0%, #2F17C0 100%); }
-
-.information {
-  min-height: 100vh;
-  background-color: #ffffff;
-  position: relative; }
-  .information .container {
-    min-height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
-
-.information-check {
-  color: #000000;
-  position: absolute;
-  right: 75px;
-  bottom: 60px;
-  line-height: 1.5; }
-
-.author-technology {
-  width: 60px;
-  height: 290px;
-  color: #ffffff;
-  background-color: #000000;
-  position: absolute;
-  left: 0;
-  top: 0; }
-  .author-technology svg {
-    position: absolute;
-    left: 50%;
-    bottom: -20px;
-    -webkit-transform: translateX(-50%) rotate(90deg);
-    -ms-transform: translateX(-50%) rotate(90deg);
-    transform: translateX(-50%) rotate(90deg);
-    height: 15px;
-    fill: #000000; }
-
-.author-technology__text {
-  font-family: "Roboto Bold";
-  font-size: 12px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(-90deg);
-  -ms-transform: translate(-50%, -50%) rotate(-90deg);
-  transform: translate(-50%, -50%) rotate(-90deg);
-  width: 290px;
-  text-align: center;
-  color: #ffffff; }
-
-.reading-speed {
-  padding-top: 175px;
-  padding-bottom: 100px;
-  position: relative;
-  background-color: #ffffff; }
-
-.reading-speed__label {
-  margin-bottom: 90px; }
-
-.marquee {
-  width: 100%;
-  height: 200px;
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-bottom: 200px; }
-  .marquee.active .marquee__text {
-    color: #000000; }
-  .marquee.active .marquee__wrapper {
-    margin-left: 0; }
-
-.marquee__wrapper {
-  margin-left: 50.5%; }
-
-.marquee__text {
-  font-family: "Soyuz Grotesk Bold";
-  font-size: 60px;
-  color: #bfbfbf;
-  white-space: nowrap; }
-
-.reading-speed-navigation {
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 60px; }
-  .reading-speed-navigation .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; }
-
-.range-wrapper {
-  text-align: center; }
-
-.range-wrapper__value {
-  opacity: 0;
-  margin-top: 25px;
-  font-family: "Inter Medium";
-  font-size: 12px; }
-
-.reading-speed__number {
-  font-size: 18px;
-  opacity: 0; }
-
-.reading-speed__stop {
-  opacity: 0;
-  font-family: "Soyuz Grotesk Bold";
-  font-size: 16px; }
-  .reading-speed__stop span {
-    text-decoration: underline;
-    cursor: pointer; }
 
 .description {
   background-color: #ffffff;
@@ -495,12 +305,9 @@ body {
   margin: 0 auto; }
 
 .description-whom__title {
-  font-family: "Soyuz Grotesk Bold";
+  font-family: "Roboto Bold";
   margin-bottom: 75px;
   font-size: 35px; }
-
-.description-whom-list {
-  margin-bottom: 240px; }
 
 .description-whom-item {
   border-top: 3px solid #000000;
@@ -568,7 +375,7 @@ body {
   transform: translateY(-10px); }
 
 .author-description-wrapper__name {
-  font-family: "Soyuz Grotesk Bold";
+  font-family: "Roboto Bold";
   font-size: 36px;
   margin-bottom: 40px; }
 
@@ -607,9 +414,9 @@ body {
 
 .swiper-1 {
   width: 100%;
-  height: 900px; }
+  max-height: 900px; }
   .swiper-1 .swiper-slide {
-    width: 85%;
+    width: 100%;
     position: relative;
     background-color: #000000;
     display: -webkit-box;
@@ -621,14 +428,14 @@ body {
     -webkit-box-pack: end;
     -ms-flex-pack: end;
     justify-content: flex-end;
-    padding-right: 5vw;
+    padding-right: 127px;
     padding-bottom: 5vw; }
     .swiper-1 .swiper-slide::before {
       content: '';
       width: 100%;
       height: 100%;
-      background: -o-linear-gradient(0.53deg, rgba(0, 0, 0, 0.6) 0.47%, rgba(0, 0, 0, 0) 99.57%);
-      background: linear-gradient(89.47deg, rgba(0, 0, 0, 0.6) 0.47%, rgba(0, 0, 0, 0) 99.57%);
+      background: -o-linear-gradient(0.53deg, black 0.47%, rgba(0, 0, 0, 0.5) 99.57%);
+      background: linear-gradient(89.47deg, black 0.47%, rgba(0, 0, 0, 0.5) 99.57%);
       position: absolute;
       left: 0;
       top: 0;
@@ -703,10 +510,10 @@ body {
     background-color: #5D24D4;
     position: absolute;
     left: 0;
-    top: 50%;
-    -webkit-transform: translateY(-50%) rotate(45deg);
-    -ms-transform: translateY(-50%) rotate(45deg);
-    transform: translateY(-50%) rotate(45deg); }
+    top: 7px;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg); }
 
 .registration {
   margin-bottom: 175px; }
@@ -951,7 +758,7 @@ input[type="tel"] {
 
 /* = CONTAINER END = */
 /* = MEDIA = */
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 992px) {
   .skr4t-start {
     bottom: 5px !important;
     width: 100%;
@@ -969,25 +776,22 @@ input[type="tel"] {
     text-align: center !important; } }
 
 @media screen and (max-width: 1400px) {
-  .swiper-1 {
-    width: 100%;
-    height: 60vw; }
-    .swiper-1 .swiper-slide {
-      width: 90%; }
-    .swiper-1 .swiper-button-prev {
-      width: 50px;
-      height: 50px;
-      left: 20px; }
-      .swiper-1 .swiper-button-prev::after {
-        height: 9px;
-        width: 24px; }
-    .swiper-1 .swiper-button-next {
-      width: 50px;
-      height: 50px;
-      right: 20px; }
-      .swiper-1 .swiper-button-next::after {
-        height: 9px;
-        width: 24px; }
+  .swiper-1 .swiper-slide {
+    padding-right: 75px; }
+  .swiper-1 .swiper-button-prev {
+    width: 50px;
+    height: 50px;
+    left: 20px; }
+    .swiper-1 .swiper-button-prev::after {
+      height: 9px;
+      width: 24px; }
+  .swiper-1 .swiper-button-next {
+    width: 50px;
+    height: 50px;
+    right: 20px; }
+    .swiper-1 .swiper-button-next::after {
+      height: 9px;
+      width: 24px; }
   .after-description {
     max-width: 65%; }
     .after-description .button {
@@ -998,7 +802,9 @@ input[type="tel"] {
     margin-bottom: 15px;
     font-size: 1.45vw; }
   .after-description__item {
-    font-size: 1.25vw; } }
+    font-size: 1.35vw; }
+    .after-description__item:before {
+      top: 4px; } }
 
 @media screen and (max-width: 1200px) {
   .skr4t-information__title {
@@ -1009,19 +815,6 @@ input[type="tel"] {
     font-size: 16px; }
   .text {
     font-size: 30px; }
-  .information {
-    min-height: inherit; }
-    .information .container {
-      min-height: inherit;
-      padding-top: 150px;
-      padding-bottom: 250px; }
-  .information-check {
-    font-size: 16px;
-    width: 40%; }
-    .information-check br {
-      display: none; }
-  .reading-speed {
-    padding-top: 100px; }
   .description {
     padding-top: 50px; }
   .author__title {
@@ -1031,9 +824,8 @@ input[type="tel"] {
     margin-bottom: 100px; }
   .description-whom__title {
     font-size: 30px;
-    margin-bottom: 75px; }
-  .description-whom-list {
-    margin-bottom: 100px; }
+    margin-bottom: 75px;
+    text-align: center; }
   .description-whom-item__label {
     font-size: 24px; }
   .description-whom-item {
@@ -1057,18 +849,6 @@ input[type="tel"] {
   .header-navigation {
     padding-left: 15px;
     padding-right: 15px; }
-  .author-technology {
-    height: 60px;
-    width: 290px;
-    left: 50%;
-    top: 50px;
-    -webkit-transform: translate(-50%, 0);
-    -ms-transform: translate(-50%, 0);
-    transform: translate(-50%, 0); }
-  .author-technology__text {
-    -webkit-transform: translate(-50%, -50%) rotate(0);
-    -ms-transform: translate(-50%, -50%) rotate(0);
-    transform: translate(-50%, -50%) rotate(0); }
   .text {
     max-width: 100%; }
     .text br {
@@ -1076,16 +856,6 @@ input[type="tel"] {
   .text__title {
     display: block;
     width: inherit; }
-  .information-check {
-    width: inherit;
-    right: 0; }
-    .information-check br {
-      display: block; }
-  .marquee {
-    height: 150px;
-    margin-bottom: 100px; }
-  .marquee__text {
-    font-size: 40px; }
   .description-schema-image {
     height: 200px;
     margin-right: 50px; }
@@ -1125,7 +895,12 @@ input[type="tel"] {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
     width: 100%; }
+    .author-description-wrapper .button {
+      margin-top: 25px; }
   .author-description-wrapper__name {
     margin-bottom: 20px; }
   .author-description-wrapper__text {
@@ -1140,9 +915,6 @@ input[type="tel"] {
       -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center; }
-    .author-description-wrapper__background.bg-3 {
-      -ms-flex-item-align: end;
-      align-self: flex-end; }
   .video {
     background: transparent;
     height: 380px;
@@ -1173,16 +945,17 @@ input[type="tel"] {
     font-size: 16px;
     width: 100%; }
   .swiper-1 .swiper-slide {
-    width: 100%; }
+    padding-left: 75px;
+    padding-bottom: 10vw;
+    padding-top: 10vw; }
     .swiper-1 .swiper-slide::before {
-      background: rgba(0, 0, 0, 0.4); }
+      background: rgba(0, 0, 0, 0.8); }
   .swiper-button-prev {
     top: 30px; }
   .swiper-button-next {
     top: 30px; }
   .after-description {
-    padding-left: 15px;
-    padding-bottom: 15px;
+    padding-left: 10px;
     max-width: 100%; }
     .after-description .button {
       padding: 10px 5px; }
@@ -1230,36 +1003,6 @@ input[type="tel"] {
     text-align: center; }
   .text {
     font-size: 24px; }
-  .information .container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    padding-bottom: 25px; }
-  .information-check {
-    width: 90%;
-    position: inherit;
-    right: inherit;
-    bottom: inherit;
-    text-align: center;
-    padding-top: 50px; }
-    .information-check br {
-      display: none; }
-  .marquee {
-    margin-bottom: 50px; }
-  .range-wrapper {
-    margin-bottom: 25px; }
-  .reading-speed {
-    padding-bottom: 50px; }
-  .reading-speed-navigation {
-    position: inherit;
-    left: inherit;
-    bottom: inherit; }
-    .reading-speed-navigation .container {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column; }
   .description {
     padding-top: 0; }
     .description .text {
@@ -1271,7 +1014,8 @@ input[type="tel"] {
     flex-direction: column;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center; }
+    align-items: center;
+    margin-bottom: 50px; }
   .description-schema-image {
     height: 200px;
     margin-right: 0;
@@ -1281,7 +1025,9 @@ input[type="tel"] {
   .description-schema-text__details {
     margin-bottom: 15px; }
   .description-whom__title {
-    margin-bottom: 25px; }
+    padding-top: 25px;
+    margin-bottom: 25px;
+    font-size: 22px; }
   .description-whom-item__label {
     font-size: 18px; }
   .description-whom-item__text {
@@ -1324,31 +1070,13 @@ input[type="tel"] {
     -ms-flex-pack: distribute;
     justify-content: space-around; }
     .footer-wrapper .button__label {
-      font-size: 18px; }
-  .swiper-1 {
-    height: auto; }
-    .swiper-1 .swiper-slide {
-      padding-top: 150px;
-      padding-right: 0;
-      padding-bottom: 50px; }
-  .after-description {
-    border: none; } }
-
-@media screen and (max-width: 667px) {
-  .after-description__item {
-    font-size: 12px; } }
+      font-size: 18px; } }
 
 @media screen and (max-width: 568px) {
   .text {
     font-size: 18px; }
   .text__title {
     font-size: 12px; }
-  .information-check {
-    font-size: 14px; }
-  .reading-speed {
-    padding-top: 50px; }
-  .reading-speed__label {
-    margin-bottom: 50px; }
   .description {
     padding-bottom: 50px; }
   .description-schema-text__details {
@@ -1362,8 +1090,6 @@ input[type="tel"] {
   .description-whom__title {
     font-size: 20px;
     text-align: center; }
-  .description-whom-list {
-    margin-bottom: 50px; }
   .author-wrapper {
     padding-top: 50px;
     padding-bottom: 50px; }
@@ -1373,10 +1099,6 @@ input[type="tel"] {
     font-size: 20px; }
     .author-description-wrapper__background span {
       font-size: 14px; }
-  .marquee {
-    height: 100px; }
-  .marquee__text {
-    font-size: 24px; }
   .after {
     margin-bottom: 50px; }
   .video {
@@ -1391,8 +1113,10 @@ input[type="tel"] {
 
 @media screen and (max-width: 480px) {
   .swiper-1 .swiper-slide {
-    padding-top: 75px;
-    padding-bottom: 25px; }
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 15vw;
+    padding-bottom: 15vw; }
   .swiper-1 .swiper-button-prev {
     width: 35px;
     height: 35px; }
@@ -1402,9 +1126,11 @@ input[type="tel"] {
   .after-description__title {
     margin-bottom: 8px; }
   .after-description__item {
+    padding-left: 13px;
     margin-bottom: 5px; }
   .after-description {
-    padding-right: 15px; } }
+    padding-left: 5px;
+    padding-right: 5px; } }
 
 @media screen and (max-width: 414px) {
   .description-whom-item {
@@ -1414,6 +1140,10 @@ input[type="tel"] {
     font-size: 16px; }
   .description-whom-item__text {
     font-size: 12px; } }
+
+@media screen and (max-width: 380px) {
+  .skr4t-information__subtitle {
+    font-size: 35px; } }
 
 @media screen and (max-width: 360px) {
   .skr4t-start__text br {
