--- a/src/sass/skorost/styles.scss
+++ b/src/sass/skorost/styles.scss
@@ -213,12 +213,13 @@ body {
     white-space: nowrap;
 }
 .reading-speed__information {
-    margin: 100px 0 70px 0;
+    margin-top: 100px;
     text-align: center;
     font-family: $robotoBold;
 }
 .reading-speed-navigation {
     width: 100%;
+    margin-top: 30px;
     .container{
         display: flex;
         justify-content: space-between;
@@ -329,9 +330,14 @@ body {
         position: inherit;
         left: inherit;
         bottom: inherit;
+        margin-top: 20px;
         .container {
           flex-direction: column;
         }
+      }
+      .reading-speed__information {
+          font-size: 16px;
+          margin-top: 50px;
       }
 }
 @media screen and (max-width: 568px) {
@@ -356,4 +362,14 @@ body {
       .marquee__text{
         font-size: 24px;
       }
+    .reading-speed__information {
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .reading-speed__information {
+        br {
+            display: none;
+        }
+    }
 }
